--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" href="css/select2.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/jquery-3.6.4.min.js"></script>
-  <script src="js/select2.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="form-row">
