--- a/popup.html
+++ b/popup.html
@@ -10,19 +10,19 @@
 <body>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="select-currency" class="form-control form-control-sm">Выберите валюту:</label>
+      <label for="select-currency" class="form-control form-control-sm">Выберіть валюту:</label>
       <select id="select-currency" class="form-control form-control-sm">
-        <!-- Сюда вставим пункты выпадающего меню -->
+        <!-- Сюди додамо пункти випадаючого меню -->
       </select>
     </div>
     <div class="form-group col-md-6">
-      <label for="amount" class="form-control form-control-sm">Введите сумму для конвертации</label>
-      <input id="amount" type="text" class="form-control form-control-sm" placeholder="Сумма для конвертации">
+      <label for="amount" class="form-control form-control-sm">Введіть суму для конвертації</label>
+      <input id="amount" type="text" class="form-control form-control-sm" placeholder="Сума для конвертації">
     </div>
   </div>
-  <button id="convert-btn" type="submit" class="btn btn-primary form-control">Конвертировать</button>
+  <button id="convert-btn" type="submit" class="btn btn-primary form-control">Конвертувати</button>
   <div class="md-6">
-    <label for="result-lbl" class="md-6">Результат ковертации:</label>
+    <label for="result-lbl" class="md-6">Результат конвертації:</label>
     <label id="result-lbl" class="md-6"></label>
   </div>
 
