--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,7 @@
           <p class="m-0" style="font-size: 12px;">Designed by AleXKaN, ®2023</p>
         </div>
         <div class="col-2 text-end">
-          <a href="mailto:korshunov.olexiy@example.com" class="btn btn-secondary">
+          <a href="mailto:korshunov.olexiy@gmail.com" class="btn btn-secondary">
             <img src="images/email-icon.png" alt="Email" class="me-1" title="Написати мені листа">
           </a>
         </div>
