--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 
 <!-- Додаємо "checkbox", через який можна увімкнути/вимкнути розширення -->
 <div class="form-check form-switch bg-warning mb-2">
-  <input class="form-check-input" type="checkbox" id="toggle-extension" checked="true">
+  <input class="form-check-input" type="checkbox" id="toggle-extension"> <!--  checked="true" -->
   <label class="form-check-label" for="toggle-extension">Вимкнути/увімкнути конвертацію</label>
 </div>
 
