--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
   <input class="form-check-input" type="checkbox" id="toggle-extension"
          data-tooltip="Вимикає/вмикає конвертацію при виділенні тексту на сторінці">
   <label class="form-check-label" for="toggle-extension">Вимкнути/увімкнути конвертацію</label>
-  <div id="tooltip"></div>
+  <div id="tooltip_toggle"></div>
 </div>
 
   <div class="form-row">
@@ -38,8 +38,15 @@
   <footer class="bg-secondary fixed-bottom">
     <div class="container py-1">
       <div class="row justify-content-center">
-        <div class="col-7 text-start align-self-end">
+        <div class="col-5 text-start align-self-end">
           <p class="m-0" style="font-size: 12px;">Designed by AleXKaN, ®2023</p>
+        </div>
+        <div class="col-2 text-end">
+          <a href="https://www.buymeacoffee.com/alexkan" target="_blank" class="btn btn-secondary">
+            <img src="images/buymecoffee-icon.png" alt="BuyMeCoffee" class="me-1"
+                title="Всі мої програми безкоштовні.&#013;Ви можете підтримати мене, купив мені кофе :)">
+          </a>
+          <div id="tooltip_buymecoffee"></div>
         </div>
         <div class="col-2 text-end">
           <a href="mailto:korshunov.olexiy@gmail.com" class="btn btn-secondary">
